--- a/Helperland/helperland1.0/Views/Shared/form3.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form3.cshtml
@@ -1,6 +1,8 @@
 ﻿	<form id="form3">
 				<div id="your_details" class="tabcontent">
-                    <p>Please select your age:</p>
+
+                    <div id="address">
+                    <p>Please select your addreee:</p>
                     <div class="radiobutton">
                         <input type="radio" id="address1" name="address" value="1" />
                         <label for="address1"><span>ADDRESS:</span><span>xyx</span> <br />
@@ -13,6 +15,9 @@
                     </div>
                     <button class="btn add_address" id="add_address" onclick="toggleText()">+ Add New
 						Address</button>
+                    </div>
+
+
                     <form action="" class="address_form">
                         <div class="row mb-3">
                             <div class="col-md-6 col-sm-12">
