Address section completed

--- a/Helperland/helperland1.0/Views/Customer/BookService.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/BookService.cshtml
@@ -343,35 +343,106 @@
 
 			    var data = $("#form1").serialize();
 
-			 alert("Inside load address")
+				 alert("Inside load address")
 
-					$.ajax({
-						type: 'get',
-						url: '/customer/detailsservice',
-						contenttype: 'application/x-www-form-urlencoded; charset=utf-8',
-						 data: data,
+						$.ajax({
+							type: 'get',
+							url: '/customer/detailsservice',
+							contenttype: 'application/x-www-form-urlencoded; charset=utf-8',
+							 data: data,
 
-						success: function (result) {
-							var address = $("#address");
-							address.empty();
-							for (let i = 0; i < result.length; i++) {
-								var checked = "";
-								if (result[i].isdefault == true) {
-									checked = "checked";
+							success: function (result) {
+								var address = $("#address");
+								address.empty();
+								address.append('<p>Please select your addreee:</p>');
+								if(result.length==0)
+								{
+									ClickFunction("addAddressBtn");
 								}
-								address.append('<div><input type="radio" id="address' + i + '"' + checked + ' value="' + result[i].addressid + '" name="bookaddress"><label for="address' + i + '"><p><b>address:</b> ' + result[i].addressline2 + ' ' + result[i].addressline1 + ', ' + result[i].city + ' ' + result[i].postalcode + '</p ><p><b>phone number:</b> ' + result[i].mobile + '</p></label></div>');
-								checked = "";
+								for (let i = 0; i < result.length; i++) {
+									var checked = "";
+									if (result[i].isDefault == true) {
+										checked = "checked";
+									}
+
+									
+								
+									address.append(' <div class="row radiobutton">'+
+											 '<div style="max-width: 10px" class="col-1"><input type="radio" id=" '+ i +' " ' + checked +' name="address" value="'+ result[i].addressId + '" /></div>'+
+											' <div class="col-11"><label for="'+ i +'"><span>Address:</span><br><span>'+ result[i].addressLine1 +'</span>,&nbsp;<span>'+ result[i].addressLine2 +'</span><br><span>'+ result[i].city +'</span>&nbsp;<span>'+ result[i].postalCode +'</span>'+
+											'<br><span>PHONE NUMBER:</span> ' + result[i].mobile + ' <span></span></label></div> </div>');
+
+								
+
+
+									checked = "";
+								}
+								console.log(result);
+							},
+							error: function () {
+								alert('failed to receive the data');
+								console.log('failed ');
 							}
-							console.log(result);
-						},
-						error: function () {
-							alert('failed to receive the data');
-							console.log('failed ');
-						}
-					});
+						});
 				}
 
 
+			function addAddressdiv() {
+				document.getElementById('addAddressBtn').style.display = "none";
+				document.getElementById('addNewaddressDiv').style.display = "block";
+				document.getElementById('addAddressPostalCode').value=document.getElementById("postalcode").value;
+				document.getElementById('addAddressPostalCode').disabled=true;
+				
+				
+			}
+
+
+				function saveAddress() {
+					alert("in save address 1")
+					var data = {};
+					data.AddressLine1 = document.getElementById("AddressLine1").value;
+					data.AddressLine2 = document.getElementById("AddressLine2").value;
+					data.PostalCode = document.getElementById("addAddressPostalCode").value;
+					data.City = document.getElementById("City").value;
+					data.Mobile = document.getElementById("Mobile").value;
+					alert("in save address 2")
+
+					
+
+				
+						$.ajax({
+							type: 'POST',
+							url: '/Customer/AddNewAddress',
+							contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+							data: data,
+							success: function (result) {
+								if (result.value == "true") {
+							
+
+									 ClickFunction("addressCancelBtn");
+									 loadAddress();
+									
+								}
+								else {
+									$("#detailServiceAlert").removeClass("d-none").text("Sorry! Something went wrong please try again later.");
+								}
+							},
+							error: function () {
+								alert('Failed to receive the Data');
+								console.log('Failed ');
+							}
+						});
+					}
+				
+
+
+
+function cancelAddress() {
+    document.getElementById("addNewaddressDiv").style.display = "none";
+	document.getElementById('addAddressBtn').style.display = "block";
+
+
+}
 
 
 
