--- a/Helperland/helperland1.0/Views/Shared/form3.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form3.cshtml
@@ -1,8 +1,9 @@
-﻿	<form id="form3">
+﻿@model helperland1._0.ViewModel.Address;	
+<form id="form3">
 				<div id="your_details" class="tabcontent">
-
+                     
                     <div id="address">
-                    <p>Please select your addreee:</p>
+                   
                     <div class="radiobutton">
                         <input type="radio" id="address1" name="address" value="1" />
                         <label for="address1"><span>ADDRESS:</span><span>xyx</span> <br />
@@ -13,30 +14,33 @@
                         <label for="address2"><span>ADDRESS:</span><span>abc</span> <br />
 							<span>PHONE NUMBER:</span> <span>9898989898</span></label>
                     </div>
-                    <button class="btn add_address" id="add_address" onclick="toggleText()">+ Add New
-						Address</button>
-                    </div>
 
+                     </div>
+                    <button type="button" class="btn add_address" id="addAddressBtn" onclick="addAddressdiv()">+ Add New
+						Address</button>
+                   
+
+                    <div id="addNewaddressDiv" class="container-fluid">
 
                     <form action="" class="address_form">
                         <div class="row mb-3">
                             <div class="col-md-6 col-sm-12">
                                 <label for="streetname" class="form-label">Street name</label>
-                                <input type="text" class="form-control" name="streetname" placeholder="Street name" />
+                                <input asp-for="AddressLine1"     type="text" class="form-control" name="streetname" placeholder="Street name"  />
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <label for="housenumber" class="form-label">House number</label>
-                                <input type="text" class="form-control" name="housenumber" placeholder="House number" />
+                                <input  asp-for="AddressLine2"  type="text" class="form-control" name="housenumber" placeholder="House number" />
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-md-6 col-sm-12">
                                 <label for="postalcode" class="form-label">Postal Code</label>
-                                <input type="text" class="form-control" name="postalcode" placeholder="Postal Code" />
+                                <input  asp-for="PostalCode"  id="addAddressPostalCode" type="text" class="form-control" name="postalcode" placeholder="Postal Code" />
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <label for="city" class="form-label">City</label>
-                                <input type="text" class="form-control" name="city" placeholder="City" />
+                                <input asp-for="City" type="text" class="form-control" name="city" placeholder="City" />
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -44,15 +48,16 @@
                                 <label for="phonenumber" class="form-label">Phone number</label>
                                 <div class="input-group">
                                     <div class="input-group-text">+49</div>
-                                    <input type="text" class="form-control" name="phonenumber" placeholder="Mobile Number" />
+                                    <input  asp-for="Mobile"  type="text" class="form-control" name="phonenumber" placeholder="Mobile Number" />
                                 </div>
                             </div>
                         </div>
 
                         <div>
-                            <button type="submit" class="btn save">Save</button>
-                            <button type="reset" class="btn cancel">Cancel</button>
+                            <button type="button" class="btn save" onclick='saveAddress()'>Save</button>
+                            <button id="addressCancelBtn" type="reset" class="btn cancel" onclick='cancelAddress()'>Cancel</button>
                         </div>
                     </form>
                 </div>
 				</form>
+                </div>
