--- a/Helperland/helperland1.0/Views/Shared/form2.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form2.cshtml
@@ -1,7 +1,7 @@
 ﻿@model helperland1._0.ViewModel.ScheduleService;
 
 <form id="form2" >
-				<div id="schedule" class="tabcontent schedule">
+				<div id="at2" class="tabcontent schedule">
 					
 
 					<div class="row">
