--- a/Helperland/helperland1.0/Views/Shared/form4.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form4.cshtml
@@ -1,5 +1,5 @@
 ﻿
-				<div id="make_payment" class="tabcontent make_payment">
+				<div id="at4" class="tabcontent make_payment">
 					<h2>Pay Secuerly with Helperland Payment Gateway! </h2>
 					<label>Promo code (Optional)</label>
 					<br>
