Service request entry in db done

--- a/Helperland/helperland1.0/Views/Customer/BookService.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/BookService.cshtml
@@ -462,6 +462,100 @@ function cancelAddress() {
 
 
 
+
+function completeBookService() {
+    var data = {};
+    var extrahour = 0;
+    var cabinet = document.getElementById("InsideCabinat");
+    var window = document.getElementById("InsideWindow");
+    var fridge = document.getElementById("InsideFridge");
+    var oven = document.getElementById("InsideOven");
+    var laundry = document.getElementById("InsideLaundry");
+
+    if (cabinet.checked == true) {
+        extrahour += 0.5;
+        data.cabinet = true;
+    }
+    if (window.checked == true) {
+        extrahour += 0.5;
+        data.window = true;
+    }
+    if (fridge.checked == true) {
+        extrahour += 0.5;
+        data.fridge = true;
+    }
+    if (oven.checked == true) {
+        extrahour += 0.5;
+        data.oven = true;
+    }
+    if (laundry.checked == true) {
+        extrahour += 0.5;
+        data.laundry = true;
+    }
+    data.postalCode = document.getElementById("postalcode").value;
+	
+				//var temp=document.getElementById("Date");
+				//alert(temp.value);
+				//var date=new Date(temp.value);
+				//alert(date);
+
+				//date.setHours(data.startTime,0,0,0);
+				//alert(date+"after set hours")
+				// const a = date.toISOString().split('T')[0];
+			 // const b = date.toTimeString().split(' ')[0];
+			 //date=a+" "+b;
+	
+   var temp=document.getElementById("Date").value;
+    data.serviceStartDate =temp+" "+document.getElementById("Time").value;
+	
+   
+    
+	data.serviceHours=document.getElementById("Duration").value;
+    data.extraHours = extrahour;
+	var duration= parseFloat(document.getElementById("Duration").value);
+	var extra= parseFloat( extrahour);
+   // data.subTotal = (extrahour * 25) + ((document.getElementById("Duration").value) * 25);
+   data.subTotal= (extra + duration)*25;
+    data.totalCost =  data.subTotal; //Discount 0(out of scope)
+    data.comments = document.getElementById("comments").value;
+    data.paymentDue = false;
+    data.HasPets = document.getElementById("flexCheckDefault").value;
+	alert(document.getElementById("flexCheckDefault").checked);
+	
+    data.paymentDone = true;
+
+    //data.addressId = $('#addresses div input[type=radio]:checked').val();
+	data.addressId=document.querySelector('input[name="address"]:checked').value;
+	alert(data.addressId);
+    
+    $.ajax({
+        type: 'post',
+        url: '/customer/completebooking',
+        contenttype: 'application/x-www-form-urlencoded; charset=utf-8',
+        data: data,
+        success: function (result) {
+            if (result.value == "false") {
+                
+                alert("schedule is not valid");
+
+            }
+            else {
+                //$("#modalserviceid").text("service id : " + result.value);
+               // $("#completebookingmodalbtn").click();
+			   alert("done")
+            }
+        },
+
+        error: function () {
+            alert('failed to receive the data');
+            console.log('failed ');
+        }
+    });
+}  
+
+
+
+
 	</script>
 	
 
