--- a/Helperland/helperland1.0/Views/Shared/form2.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form2.cshtml
@@ -9,14 +9,32 @@
 							<h2>when do you need cleaner?</h2>
 							<div class="row">
 								<div class="col-4">
-									<input type="date" asp-for="Date" class="form-control " placeholder="canlender">
+									<input type="date" asp-for="Date" class="form-control " placeholder="canlender" min={new Date().toISOString().split('T')[0]}>
 								</div>
 								<div class="col-4">
 									<select class="form-select" asp-for="Time"   aria-label="Default select example">
 										
-										<option selected value="1">2:00 PM</option>
-										<option value="2">3:00 PM</option>
-										<option value="3">4:00 PM</option>
+										<option selected value="08:00:00">8:00 </option>
+										<option value="08:30:00">8:30 </option>
+										<option value="09:00:00">9:00 </option>
+										<option value="09:30:00">9:30 </option>
+										<option value="10:00:00">10:00 </option>
+										<option value="10:30:00">10:30 </option>
+										<option value="11:00:00">11:00 </option>
+										<option value="11:30:00">11:30 </option>
+										<option value="12:00:00"> 12:00  </option>
+										<option value="12:30:00">12:30 </option>
+										<option value="13:00:00"> 13:00  </option>
+										<option value="13:30:00">13:30 </option>
+										<option value="14:00:00"> 14:00  </option>
+										<option value="14:30:00">14:30 </option>
+										<option value="15:00:00"> 15:00  </option>
+										<option value="15:30:00">15:30 </option>
+										<option value="16:00:00"> 16:00  </option>
+										<option value="16:30:00">16:30 </option>
+										<option value="17:00:00"> 17:00  </option>
+										<option value="17:30:00">17:30 </option>
+										<option value="18:00:00"> 18:00  </option>
 									</select>
 								</div>
 							</div>
@@ -27,9 +45,21 @@
 							<div class="col-4">
 								<select class="form-select"  asp-for="Duration"  aria-label="Default select example">
 									
-									<option selected value="3">3.0 hrs</option>
-									<option value="2">2.0 hrs</option>
-									<option value="1">1.0 hrs</option>
+									 <option selected value="3">3.0 hrs</option>
+									<option value="3.5">3.5 hrs</option>
+									<option value="4">4.0 hrs</option>
+									<option value="4.5">4.5 hrs</option>
+									<option value="5">5.0 hrs</option>
+									<option value="5.5">5.5 hrs</option>
+									<option value="6">6.0 hrs</option>
+									<option value="6.5">6.5 hrs</option>
+									<option value="7">7.0 hrs</option>
+									<option value="7.5">7.5 hrs</option>
+									<option value="8">8.0 hrs</option>
+									<option value="8.5">8.5 hrs</option>
+									<option value="9">9.0 hrs</option>
+									<option value="9.5">9.5 hrs</option>
+									<option value="10">10 hrs</option>
 								</select>
 							</div>
 						</div>
