--- a/Helperland/helperland1.0/Views/Shared/form3.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form3.cshtml
@@ -1,6 +1,6 @@
 ﻿@model helperland1._0.ViewModel.Address;	
 <form id="form3">
-				<div id="at3" class="tabcontent">
+		   <div id="at3" class="tabcontent">
                      
                     <div id="address">
                    
@@ -20,7 +20,7 @@
 						Address</button>
                    
 
-                    <div id="addNewaddressDiv" class="container-fluid">
+                <div id="addNewaddressDiv" class="container-fluid">
 
                     <form action="" class="address_form">
                         <div class="row mb-3">
@@ -58,6 +58,16 @@
                             <button id="addressCancelBtn" type="reset" class="btn cancel" onclick='cancelAddress()'>Cancel</button>
                         </div>
                     </form>
-                </div>
-				</form>
-                </div>
+            </div>
+            <hr />
+            <br /><br />
+            <button class="continue" type="button" onclick="Clickable('form4Btn');ClickFunction('form4Btn')">
+						Continue
+					</button>
+
+           </div>
+                 
+
+ </form>
+           
+                
