--- a/Helperland/helperland1.0/Views/Shared/form4.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form4.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<form id="form4">
 				<div id="at4" class="tabcontent make_payment">
 					<h2>Pay Secuerly with Helperland Payment Gateway! </h2>
 					<label>Promo code (Optional)</label>
@@ -14,7 +14,8 @@
 					policy. I confirm that Helperland starts to execute the contract before the expiry of the withdrawal
 					period and I lose my right of withdrawal as a consumer with full performance of the contract.
 					<hr>
-					<button class="continue" type="submit">
+					<button class="continue" type="button" onclick="completeBookService()">
 						Complete Booking
 					</button>
 				</div>
+</form>
