--- a/Helperland/helperland1.0/Views/Shared/form3.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form3.cshtml
@@ -27,20 +27,24 @@
                             <div class="col-md-6 col-sm-12">
                                 <label for="streetname" class="form-label">Street name</label>
                                 <input asp-for="AddressLine1"     type="text" class="form-control" name="streetname" placeholder="Street name"  />
+                                 <span asp-validation-for="AddressLine1" class="formwarning"></span>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <label for="housenumber" class="form-label">House number</label>
                                 <input  asp-for="AddressLine2"  type="text" class="form-control" name="housenumber" placeholder="House number" />
+                                 <span asp-validation-for="AddressLine2" class="formwarning"></span>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-md-6 col-sm-12">
                                 <label for="postalcode" class="form-label">Postal Code</label>
                                 <input  asp-for="PostalCode"  id="addAddressPostalCode" type="text" class="form-control" name="postalcode" placeholder="Postal Code" />
+                                 <span asp-validation-for="PostalCode" class="formwarning"></span>
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <label for="city" class="form-label">City</label>
                                 <input asp-for="City" type="text" class="form-control" name="city" placeholder="City" />
+                                 <span asp-validation-for="City" class="formwarning"></span>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -48,7 +52,8 @@
                                 <label for="phonenumber" class="form-label">Phone number</label>
                                 <div class="input-group">
                                     <div class="input-group-text">+49</div>
-                                    <input  asp-for="Mobile"  type="text" class="form-control" name="phonenumber" placeholder="Mobile Number" />
+                                    <input  asp-for="Mobile"  type="number" class="form-control" name="phonenumber" placeholder="Mobile Number" />
+                                     <span asp-validation-for="Mobile" class="formwarning"></span>
                                 </div>
                             </div>
                         </div>
